objects/PLA_Page_ConsolidatedList__c.object
<CustomObject>
    <description>Stores the data in the Consolidated list from the PL_Calculate Page/Controller (VFP). Then it is is used to render the data in the PL_View page for Product Services</description>
    <fields>
        <fullName>DSS6__c</fullName>
        <label>DSS</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_NameList__c</fullName>
        <label>Group NameList</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFC_Hardware3__c</fullName>
        <label>IFC Hardware</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFC_Services4__c</fullName>
        <label>IFC Services</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFC_SubTotal5__c</fullName>
        <label>IFC SubTotal</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Hardware0__c</fullName>
        <label>IFE Hardware</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_Services1__c</fullName>
        <label>IFE Services</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFE_SubTotal2__c</fullName>
        <label>IFE SubTotal</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Sales9__c</fullName>
        <label>Net Sales</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTS7__c</fullName>
        <label>PTS</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_L_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P&amp;L Approval</label>
        <referenceTo>L2I_P_L_Approval__c</referenceTo>
        <relationshipName>PLA_Page_ConsolidatedLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Color_Code__c</fullName>
        <label>Row Color Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Span_Count__c</fullName>
        <label>Row Span Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Program8__c</fullName>
        <label>Total Program</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical_Header_Color__c</fullName>
        <label>Vertical Header Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCol_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCol Display</label>
        <type>Checkbox</type>
    </fields>
    <label>Archived Consolidated Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Consolidated Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>